...
    self.originalHeader=[UIView new]; self.originalHeader.backgroundColor=TCOriginalDark();
    [self.view addSubview:self.originalHeader];
    self.originalTitle=TCOriginalArtwork(@"00"); [self.originalHeader addSubview:self.originalTitle];
    self.pickerTab=TCOriginalButton(@"112x138",@"112x138 B",NSLocalizedString(@"Color Sources",nil),@"original.picker",self,@selector(showOriginalPicker));
    self.libraryTab=TCOriginalButton(@"320x138",@"320x138 B",NSLocalizedString(@"Saved Colors",nil),@"original.library",self,@selector(showOriginalLibrary));
    [self.originalHeader addSubview:self.pickerTab]; [self.originalHeader addSubview:self.libraryTab];
    self.homeScroll=[UIScrollView new]; self.homeScroll.accessibilityIdentifier=@"sourceControls";
    self.homeScroll.contentInsetAdjustmentBehavior=UIScrollViewContentInsetAdjustmentNever;
    [self.view addSubview:self.homeScroll]; self.homeStage=[UIView new]; [self.homeScroll addSubview:self.homeStage];
    self.originalDroplet=TCOriginalArtwork(@"245x248"); [self.homeStage addSubview:self.originalDroplet];
    self.sourceButtons=[UIStackView new]; self.sourceButtons.axis=UILayoutConstraintAxisVertical;
    self.sourceButtons.distribution=UIStackViewDistributionFillEqually;
    NSArray *art=@[@"117x532",@"117x638",@"117x744"];
    NSArray *titles=@[NSLocalizedString(@"Choose Photo",nil),NSLocalizedString(@"Take Photo",nil),NSLocalizedString(@"Live Color",nil)];
    NSArray *identifiers=@[@"choosePhoto",@"takePhoto",@"liveColor"];
    for (NSUInteger i=0;i<3;i++) {
        UIButton *button=TCOriginalButton(art[i],[art[i] stringByAppendingString:@" B"],titles[i],identifiers[i],self,@selector(selectSource:));
        button.tag=i; [self.sourceButtons addArrangedSubview:button];
    }
    [self.homeStage addSubview:self.sourceButtons];
    self.tableView=[[UITableView alloc] initWithFrame:CGRectZero style:UITableViewStylePlain];
    self.tableView.backgroundColor=TCOriginalBackground(); self.tableView.separatorStyle=UITableViewCellSeparatorStyleNone;
    self.tableView.dataSource=self; self.tableView.delegate=self;
    self.tableView.accessibilityIdentifier=@"colorHistory";
    [self.view addSubview:self.tableView];
    self.libraryFooter=[UIStackView new]; self.libraryFooter.axis=UILayoutConstraintAxisVertical; self.libraryFooter.spacing=4;
    self.importPaletteButton=[UIButton buttonWithType:UIButtonTypeSystem];
    [self.importPaletteButton setTitle:NSLocalizedString(@"Import Palette",nil) forState:UIControlStateNormal];
    self.importPaletteButton.accessibilityIdentifier=@"palette.import.open";
    [self.importPaletteButton addTarget:self action:@selector(openPaletteImport) forControlEvents:UIControlEventTouchUpInside];
...
        [self.libraryFooter addArrangedSubview:button];
    }
    self.tableView.tableFooterView=self.libraryFooter;
    self.loading=[[UIActivityIndicatorView alloc] initWithActivityIndicatorStyle:UIActivityIndicatorViewStyleMedium];
    self.loading.hidesWhenStopped=YES;
    UIButton *cancel=[UIButton buttonWithType:UIButtonTypeSystem];
    [cancel setTitle:NSLocalizedString(@"Cancel",nil) forState:UIControlStateNormal];
    cancel.titleLabel.font=[UIFont preferredFontForTextStyle:UIFontTextStyleBody]; cancel.titleLabel.adjustsFontForContentSizeCategory=YES;
    cancel.titleLabel.numberOfLines=0; cancel.accessibilityIdentifier=@"photo.import.cancel";
    [cancel.heightAnchor constraintGreaterThanOrEqualToConstant:44].active=YES;
    [cancel addTarget:self action:@selector(cancelPhotoImport) forControlEvents:UIControlEventTouchUpInside];
    self.loadingPanel=[[UIStackView alloc] initWithArrangedSubviews:@[self.loading,cancel]];
    self.loadingPanel.axis=UILayoutConstraintAxisHorizontal; self.loadingPanel.spacing=12;
...
    self.loadingPanel.hidden=YES; [self.view addSubview:self.loadingPanel];
    [self showOriginalPicker];
#if DEBUG
    if ([NSProcessInfo.processInfo.arguments containsObject:@"--ui-test-camera-permission"]) {
        self.permissionStatus = [UILabel new];
        self.permissionStatus.font = [UIFont preferredFontForTextStyle:UIFontTextStyleCaption1];
        self.permissionStatus.accessibilityIdentifier = @"cameraPermissionStatus";
        self.navigationItem.titleView = self.permissionStatus;
        self.permissionStatus.textColor=UIColor.whiteColor;
        self.permissionStatus.backgroundColor=TCOriginalDark();
        [self.originalHeader addSubview:self.permissionStatus];
        [NSNotificationCenter.defaultCenter addObserver:self selector:@selector(permissionProbeSceneActivated:) name:UISceneDidActivateNotification object:nil];
        [self updatePermissionProbe];
...
    // Deterministic test fixture: never compiled into Release/App Store builds.
    if ([NSProcessInfo.processInfo.arguments containsObject:@"--ui-test-reset"]) {
        [NSUserDefaults.standardUserDefaults removeObjectForKey:@"colorArray"];
        [NSUserDefaults.standardUserDefaults removeObjectForKey:@"colorArrayRecoveryBackup"];
    }
    if ([NSProcessInfo.processInfo.arguments containsObject:@"--ui-test-image"]) {
        self.navigationItem.leftBarButtonItem = [[UIBarButtonItem alloc] initWithTitle:@"Sample Fixture" style:UIBarButtonItemStylePlain target:self action:@selector(openFixture)];
    }
#endif
}
- (void)viewDidLayoutSubviews {
    [super viewDidLayoutSubviews];
    CGFloat scale=TCOriginalScale(self.view), width=320*scale;
...
    about.title=NSLocalizedString(@"About",nil); about.view.backgroundColor=TCOriginalBackground();
    about.navigationItem.rightBarButtonItem=[[UIBarButtonItem alloc] initWithBarButtonSystemItem:UIBarButtonSystemItemClose target:self action:@selector(closeOriginalAbout)];
    about.navigationItem.rightBarButtonItem.accessibilityIdentifier=@"original.about.close";
    UIButton *policy=[UIButton buttonWithType:UIButtonTypeSystem];
    [policy setTitle:NSLocalizedString(@"Privacy Policy",nil) forState:UIControlStateNormal];
    policy.titleLabel.font=[UIFont preferredFontForTextStyle:UIFontTextStyleBody]; policy.titleLabel.adjustsFontForContentSizeCategory=YES;
    policy.titleLabel.numberOfLines=0; policy.tintColor=TCOriginalText(); policy.accessibilityIdentifier=@"privacyPolicy";
    [policy addTarget:self action:@selector(openPolicyFromOriginalAbout) forControlEvents:UIControlEventTouchUpInside];
    policy.translatesAutoresizingMaskIntoConstraints=NO; [about.view addSubview:policy];
    [NSLayoutConstraint activateConstraints:@[
        [policy.leadingAnchor constraintEqualToAnchor:about.view.safeAreaLayoutGuide.leadingAnchor constant:24],
        [policy.trailingAnchor constraintEqualToAnchor:about.view.safeAreaLayoutGuide.trailingAnchor constant:-24],
        [policy.topAnchor constraintEqualToAnchor:about.view.safeAreaLayoutGuide.topAnchor constant:24],
...
    __weak typeof(self) weakSelf = self;
    [TCPaletteImportController presentFrom:presenter completion:^{ [weakSelf sourceFlowActive:NO]; }];
}
- (void)showMessage:(NSString *)message {
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:NSLocalizedString(@"TouchColor", nil) message:message preferredStyle:UIAlertControllerStyleAlert];
    __weak typeof(self) weakSelf = self;
    [alert addAction:[UIAlertAction actionWithTitle:NSLocalizedString(@"OK", nil) style:UIAlertActionStyleCancel handler:^(UIAlertAction *action) { [weakSelf sourceFlowActive:NO]; }]];
    [self sourceFlowActive:YES];
    [[self sourcePresenter] presentViewController:alert animated:YES completion:nil];
}
- (void)selectSource:(UIButton *)button {
#if DEBUG
    if ([NSProcessInfo.processInfo.arguments containsObject:@"--ui-test-source-diagnostics"]) {
...
